Fixed query panel button align in IE11

--- a/web/client/themes/default/less/query-panel.less
+++ b/web/client/themes/default/less/query-panel.less
@@ -145,6 +145,10 @@
         height: 52px;
     }
 }
+.query-form-panel-container .query-toolbar {
+    /* align buttons in query panel for IE11 */
+    text-align: center;
+}
 
 /* QUERY BUILDER */
 
